%% UI State Machine — All AppState Values, Views, and Transitions
%% Source of truth: the actual Go source code (internal/tui/).
%%
%% Updated after Task 5: enrichment features (tap-tempo BPM, MusicBrainz year/BPM
%% fetch, Ctrl+1/Ctrl+2 commit, spinner, enrichment panel) are now implemented.

stateDiagram-v2
    %% Initial State
    [*] --> StateReviewing : App starts via Init\npendingInit dispatches\ntickCmd + spinnerTick + playCmd\n+ fetchYearCmd + fetchBPMCmd

    %% StateReviewing
    %% Rendered by viewReviewing()
    %% Shows header artist/title, progress bar, enrichment panel, status bar
    %% with queue counter, time position, errors, keybind hints

    state "StateReviewing (viewReviewing)" as StateReviewing

    %% StateGenreSelection
    %% Rendered by viewGenreModal()
    %% Two-step sub-flow within the same AppState value

    state "StateGenreSelection (viewGenreModal)" as StateGenreSelection {
        [*] --> StepPrimary

        state "Step 1: Select Primary Genre\ngenreStep = stepPrimary\nNo NONE option, filter enabled" as StepPrimary
        state "Step 2: Select Secondary Genre\ngenreStep = stepSecondary\nNONE prepended, primary in heading" as StepSecondary

        StepPrimary --> StepSecondary : Enter\nrecords selectedPrimary\nrebuilds list with NONE
    }

    %% Tag writing outcome after Step 2 confirm
    state TagWriteResult <<choice>>

    %% --- Transitions: StateReviewing to StateGenreSelection ---
    StateReviewing --> StateGenreSelection : Enter or Space\nopenGenreModal\nbuilds genre list at stepPrimary

    %% --- Transitions: StateGenreSelection to StateReviewing ---
    StateGenreSelection --> StateReviewing : Esc\ncancel, no skip\nstate = StateReviewing

    %% Step 2 confirm fires writeTagsCmd, result goes through choice
    StateGenreSelection --> TagWriteResult : Enter on Step 2\nconfirmGenreSelection\nfires writeTagsCmd

    TagWriteResult --> StateReviewing : TagWrittenMsg Err not nil\nshow error in status bar
    TagWriteResult --> StateReviewing : TagWrittenMsg Err nil\nupdate task genres\nfire saveStateCmd\nskipToNext + resetEnrichment\nauto-play next + fetchYearCmd + fetchBPMCmd

    %% --- Self-transitions within StateReviewing ---
    StateReviewing --> StateReviewing : Esc\nskipToNext + resetEnrichment\npush to History\nCurrentIndex++\nplayCmd + fetchYearCmd + fetchBPMCmd

    StateReviewing --> StateReviewing : Ctrl+U\nundoLast + resetEnrichment\npop History\nCurrentIndex--\nplayCmd + fetchYearCmd + fetchBPMCmd

    StateReviewing --> StateReviewing : Left arrow\nengine.Seek -seekDelta\ndirect call

    StateReviewing --> StateReviewing : Right arrow\nengine.Seek +seekDelta\ndirect call

    StateReviewing --> StateReviewing : p key\nengine.TogglePause\ndirect call

    StateReviewing --> StateReviewing : TickMsg every 100ms\nrefresh playbackState\nre-queue tickCmd

    StateReviewing --> StateReviewing : spinner.TickMsg\nadvance spinner animation\nre-queue spinner tick

    StateReviewing --> StateReviewing : PlayErrMsg\nset lastPlayErr\nshow error in status bar

    StateReviewing --> StateReviewing : SaveStateErrMsg\nset lastSaveErr\nshow error in status bar

    StateReviewing --> StateReviewing : WindowSizeMsg\nupdate width and height\nresize progress bar

    %% --- Enrichment transitions within StateReviewing ---
    StateReviewing --> StateReviewing : YearFetchedMsg\nenrichYearStatus = enrichFound or enrichIdle or enrichError\nenrichYearValue set if found

    StateReviewing --> StateReviewing : BPMFetchedMsg\nenrichBPMStatus = enrichFound or enrichIdle\nenrichBPMValue set if found\nfallback to tap tempo if not found

    StateReviewing --> StateReviewing : t key\nrecordTap\nappend tap time\ncalculate BPM after 8 taps\nreset on stale gap >3s\nreset on irregular tapping >40% deviation

    StateReviewing --> StateReviewing : Ctrl+1\nif enrichBPMStatus == enrichFound\nfire writeBPMCmd

    StateReviewing --> StateReviewing : BPMWrittenMsg\nenrichBPMStatus = enrichCommitted or enrichError\nupdate task BPM\nfire saveStateCmd

    StateReviewing --> StateReviewing : Ctrl+2\nif enrichYearStatus == enrichFound\nfire writeYearCmd

    StateReviewing --> StateReviewing : YearWrittenMsg\nenrichYearStatus = enrichCommitted or enrichError\nupdate task Year\nfire saveStateCmd

    %% --- Quit from any state ---
    StateReviewing --> [*] : Ctrl+C\nengine.Close\ntea.Quit
    StateGenreSelection --> [*] : Ctrl+C\nengine.Close\ntea.Quit

    %% --- End of Queue (implicit) ---
    %% When skipToNext is called and nextIndex >= len Tasks,
    %% the model stays in StateReviewing on the last song (no-op).
    %% There is no explicit done state in the current code.
